fix settings overlay z-index

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   padding: 10px;
   color: white;
   height: 20px; /* Fixed height for the menubar */
-  z-index: 1000; /* Ensure it stays on top */
+  z-index: 2000; /* Ensure it stays on top */
 }
 
 .menu-item {
@@ -46,7 +46,7 @@ body {
   border: 1px solid #222;
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 2000
 }
 
 .dropdown button {
@@ -88,7 +88,7 @@ body {
   width: 100%;
   padding: 10px;
   background-color: #f8f8f8; /* Optional for visibility */
-
+  z-index: 2000
 
 }
 
@@ -261,7 +261,7 @@ input[type="text"] {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
-  z-index: 1000; /* Above other content */
+  z-index: 2000; /* Above other content */
   justify-content: center;
   align-items: center;
 }
